Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <head>
-  <!-- The tittle goes here -->
+  <!-- Big Bug Technological Industries -->
 </head>
 <body>
-  
+  <p>Big Bug Technological Industries introduction</p>
 </body>
